Mobile, tablet design & dark mode fixes.

--- a/PlanningPoker/wwwroot/src/scss/components/c-card.scss
+++ b/PlanningPoker/wwwroot/src/scss/components/c-card.scss
@@ -8,7 +8,7 @@
 		max-width: 146px;
 		background-color: var(--color-input-border);
 		border: none;
-		color: var(--color-text-primary-dark);
+		color: var(--color-card-text);
 		cursor: pointer;
 		font-size: 1rem;
 		transition: background-color 0.3s ease;
