--- a/PlanningPoker/wwwroot/src/scss/components/c-form.scss
+++ b/PlanningPoker/wwwroot/src/scss/components/c-form.scss
@@ -9,9 +9,10 @@
 	border-radius: 20px;
 	margin-top: 2rem;
 
-	@include respond(phone) {
+	@include respond(tablet) {
 		max-width: 100%;
-		margin: 2rem 2rem;
+		margin: 2rem 0 0 0;
+		width: calc(100% - 40px);
 	}
 
 	h3 {
