--- a/PlanningPoker/wwwroot/src/scss/components/c-header.scss
+++ b/PlanningPoker/wwwroot/src/scss/components/c-header.scss
@@ -1,6 +1,6 @@
 .c-header {
 	background: var(--color-input-background);
-	border-bottom: 1px solid var(--color-neutral-light);
+	border-bottom: 1px solid var(--color-header-border);
 	display: flex;
 
 	&__logo {
@@ -9,14 +9,14 @@
 		justify-content: center;
 		flex: 0;
 		padding: 1.625rem;
-		border-right: 1px solid var(--color-neutral-light);
+		border-right: 1px solid var(--color-header-border);
 
 		@include respond(tablet) {
 			padding: 1.375rem 1.5rem;
 		}
 
 		@include respond(phone) {
-			padding: 1.25rem 1.25rem;
+			padding: 1.25rem 0.75rem;
 		}
 	}
 
@@ -26,5 +26,17 @@
 		flex: 1;
 		justify-content: space-between;
 		padding: 1.625rem;
+
+		@include respond(tablet) {
+			padding: 1.375rem 1.5rem;
+		}
+
+		@include respond(phone) {
+			padding: 1.25rem 0.75rem;
+		}
+	}
+
+	&__title {
+		margin: 0;
 	}
 }
