--- a/PlanningPoker/wwwroot/src/scss/components/c-players-list.scss
+++ b/PlanningPoker/wwwroot/src/scss/components/c-players-list.scss
@@ -9,8 +9,9 @@
 	min-width: 360px;
 	height: min-content;
 
-	@include respond(phone) {
+	@include respond(tablet) {
 		min-width: 100%;
+		margin: 0;
 	}
 
 	&-item {
@@ -55,7 +56,7 @@
 		align-items: center;
 		padding: 19px 20px;
 		background-color: var(--color-dark-background);
-		color: var(--color-text-primary-dark);
+		color: var(--color-players-list-header-text);
 		font-size: 15px;
 		font-weight: 700;
 		margin: 0;
